# SOURCE-BLOODSTRIKE-MOBILE

Bloodstrike_main/: README.md
Bloodstrike_main/app/src/main/jni/: CMakeLists.txt  main.cpp
Bloodstrike_main/app/src/main/jni/Android_draw/: Offsets.hpp  UI_Functions.h  Variabel.h  draw.cpp  draw.h  include.h
Bloodstrike_main/app/src/main/jni/Android_draw/kernelReadWrite/: wanbai.h
Bloodstrike_main/app/src/main/jni/Android_draw/memoryImage/: Logo.h
Bloodstrike_main/app/src/main/jni/Android_touch/: touch.cpp  touch.h
Bloodstrike_main/app/src/main/jni/Android_vulkan/: CreateShaderModule.cpp  VulkanMain.cpp  VulkanUtils.cpp  VulkanUtils.h
Bloodstrike_main/app/src/main/jni/Font/: Custom.h  Helper_Dieldie.h  Loader.h  Logo.h  LogoMenu.h  LogoNew.hhhhh  Pubg_Font.h  flamee.h  lexend_bold.h  ubuntu_medium.h
Bloodstrike_main/app/src/main/jni/ImGui/: IconsFontAwesome7.h  SabFont.h  font_awesome.h  imgui.cpp  imgui.h  imgui_additional.h  imgui_draw.cpp
Bloodstrike_main/app/src/main/jni/My_Utils/: GUI_Custom.cpp  GUI_Custom.h
Bloodstrike_main/app/src/main/jni/My_Utils/res/: weiyan.h
